# agent-tooling

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release-codex-conductor.yml  release-toolbelt.yml  release.yml
agent-harness/: AGENTS.md  Makefile  README.md  pyproject.toml
agent-harness/docs/: architecture.md  tool-activity.jsonl  tool-activity.md
agent-harness/src/agent_harness/: __init__.py  __main__.py  cli.py  config.py  controller.py  models.py  receipts.py  room.py  store.py
agent-harness/src/agent_harness/adapters/: __init__.py  base.py  fake.py
agent-harness/tests/: test_cli.py  test_cli_direct.py  test_config.py  test_controller.py  test_fake_adapter.py  test_models.py  test_package.py  test_receipts.py  test_room.py  test_store.py
catalog/: SCHEMA.md  catalog.toml
catalog/proposed/: README.md
codex-conductor/: .gitattributes  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
codex-conductor/.github/workflows/: codeql.yml
codex-conductor/docs/: RELEASING.md  probe-report.md
codex-conductor/specs/: claude-model-led-routing.md  claude-session-start-transcript-fix.md  claude-spawn-model-effort-display.md  ladder-config-integrity.md  provider-parity-and-doctor.md
codex-conductor/src/conductor/: accounting.py  capabilities.py  cli.py  config.py  doctor.py  gc.py  identifiers.py  identity.py  install.py  (+9 more)
codex-conductor/tests/: e2e_smoke.sh  helpers.py  test_accounting.py  test_capabilities.py  test_claude_spawn_display.py  test_cli.py  test_config.py  test_distribution.py  test_doctor.py  test_doctor_edges.py  test_gc.py  test_hook_commands.py  test_identity.py  test_install.py  test_install_claude.py  test_install_transactional.py  test_ledger.py  test_policy_claude.py  test_policy_properties.py  test_policy_v2.py  test_pre_tool_use.py  test_pricing.py  test_provider_claude.py  test_public_docs.py  test_reservation_stress.py  test_rollout.py  test_schemas.py  test_session_start.py  test_status_report.py  test_store.py  test_tool_adapter.py
conductor/: cli.py  config.py  doctor.py  filelock.py  identity.py  install.py  ledger.py  pricing.py  report.py  rollout.py  status.py
conductor/hooks/: lifecycle.py  pre_tool_use.py  session_start.py
conductor/providers/: __init__.py  claude.py
config/: conductor.claude.toml  conductor.toml
docs/: RELEASING.md  catalog-authoring.md  migrating-from-v1.md  probe-report.md
install-rehearsal/: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
install-rehearsal/.toolbelt/: lock.toml
install-rehearsal/docs/: architecture.md  tool-activity.jsonl  tool-activity.md
install-rehearsal/src/install_rehearsal/: __init__.py  __main__.py  activity.py  cli.py  models.py  profiles.py  redaction.py  reporting.py  runner.py  snapshot.py  store.py
install-rehearsal/tests/: test_activity.py  test_cli.py  test_models.py  test_profiles.py  test_redaction.py  test_runner.py  test_snapshot.py  test_store.py
install-rehearsal/tests/fixtures/: profile_installer.py
policy/: orchestration-policy.claude.md  orchestration-policy.md
probe/: probe.py
scripts/: probe_cli_output.sh
specs/: release-finalization.md  toolbelt-hardening.md  windows-parity.md  windows-portability.md
src/conductor/: __main__.py  capabilities.py  config.py  doctor.py  errors.py  gc.py  identity.py  install.py  ledger.py  legacy.py  migrations.py  operations.py  pricing.py  report.py  schemas.py  status.py  store.py  tool_adapter.py
src/toolbelt/: __init__.py  apply.py  capabilities.py  catalog.py  cli.py  discover.py  doctor.py  errors.py  evidence.py  executor.py  ignore.py  migration.py  models.py  paths.py  plan.py  planner.py  policy.py  recommend.py  reconcile.py  scanner.py  schemas.py  state.py
tests/: e2e_smoke.sh  helpers.py  test_accounting.py  test_capabilities.py  test_catalog_v2.py  test_cli.py  test_cli_v2.py  test_config.py  test_core.py  test_distribution.py  test_doctor.py  test_envelopes.py  test_executor_faults.py  test_executor_v2.py  test_filelock.py  test_gc.py  test_identity.py  test_install.py  test_install_claude.py  test_install_transactional.py  test_ledger.py  test_legacy_migration.py  test_lifecycle.py  test_migration.py  test_operations.py  test_paths.py  test_planner_v2.py  test_policy.py  test_policy_properties.py  test_pre_tool_use.py  test_pricing.py  test_provider_claude.py  test_public_docs.py  test_recovery.py  test_release_contract.py  test_rollout.py  test_scanner_v2.py  test_schemas.py  test_state_v2.py  test_status_report.py  (+2 more)
tests/fake_bin/: codex  codex.cmd
tests/fixtures/: e2e_catalog.toml  rollout_root.jsonl  rollout_subagent.jsonl  v1-conductor.toml
toolbelt/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  RELEASING.md  SECURITY.md  apply.py  brief.py  catalog.py  cli.py  evidence.py  guard.py  harness.py  manifest.py  models.py  plan.py  pyproject.toml  recommend.py  render.py
toolbelt/.github/workflows/: ci.yml
toolbelt/catalog/: SCHEMA.md
toolbelt/docs/: architecture.md  cli.md
toolbelt/docs/superpowers/plans/: 2026-07-09-professional-v2.md
toolbelt/docs/superpowers/specs/: 2026-07-09-professional-v2-design.md
toolbelt/scripts/: finalize_sbom.py
toolbelt/specs/: catalog-discovery.md  codex-skill-parity.md
toolbelt/src/toolbelt/: __main__.py  doctor.py  executor.py  paths.py  planner.py  rendering.py  schemas.py  state.py
toolbelt/src/toolbelt/adapters/: __init__.py  claude.py
toolbelt/tests/: e2e_smoke.sh  test_adversarial.py  test_catalog_v2.py  test_cli_v2.py  test_distribution_clean_env.py  test_doctor_v2.py  test_executor_faults.py  test_paths.py  test_planner_v2.py  test_policy.py  test_public_docs.py  test_scanner_manifests.py  test_scanner_v2.py  test_state_v2.py
toolbelt/tests/fixtures/providers/: claude_inventory_v1.json
(+70 files in other folders)
