[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "toolbelt-ai"
dynamic = ["version"]
description = "A deterministic CLI for managing AI-development tools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "pathspec>=0.12,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "cyclonedx-bom>=5",
  "hypothesis>=6.100",
  "pip-audit>=2.7",
  "pyright>=1.1.380",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "twine>=5",
]

[project.scripts]
toolbelt = "toolbelt.cli:main"

[tool.hatch.version]
path = "src/toolbelt/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/pyproject.toml",
  "/src/toolbelt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toolbelt"]

[tool.pyright]
include = ["src/toolbelt"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
