[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "codex-conductor"
dynamic = ["version"]
description = "Cost-aware orchestration guardrail for Codex and Claude Code subagents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "legoreddragon-ai", email = "sumanth.coder@gmail.com" }]
keywords = ["codex", "claude-code", "llm", "orchestration", "cost", "hooks"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "platformdirs>=4.2,<5",
    "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "cyclonedx-bom>=5,<8",
    "hatchling>=1.25,<2",
    "hypothesis>=6.112,<7",
    "pip-audit>=2.7,<3",
    "pyright>=1.1.380,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "twine>=5.1,<7",
]

[project.scripts]
conductor = "conductor.cli:main"

[tool.hatch.version]
path = "src/conductor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/LICENSE",
    "/Makefile",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: real multi-process contention and stress tests",
]
