[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "install-rehearsal"
version = "0.1.0"
description = "Preview trusted developer-tool installer effects in a disposable user profile"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.25,<2",
  "pyright>=1.1.400,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.15,<1",
]

[project.scripts]
install-rehearsal = "install_rehearsal.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/install_rehearsal"]

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/docs",
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]
exclude = ["/docs/superpowers"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["install_rehearsal"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

